--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
   "type": "postgres",
-  "host": "rcmf200.branati.com.br",
-  "port": 32768,
-  "username": "renato",
-  "password": "286003",
-  "database": "gostack_desafio06_tests",
+  "host": "localhost",
+  "port": 5433,
+  "username": "postgres",
+  "password": "docker",
+  "database": "gostack_desafio06",
   "entities": ["./src/models/*.ts"],
   "migrations": ["./src/database/migrations/*.ts"],
   "cli": {
